src/objects/Contact_Relationship_JO__c.object
<CustomObject>
    <description>Represents relationships between Contacts</description>
    <fields>
        <fullName>Caregiver_Role__c</fullName>
        <description>Identifies the caregiver for the PBS</description>
        <label>Caregiver Role</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>From_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Defines the source of the relationship</description>
        <label>From Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact Relationships</relationshipLabel>
        <relationshipName>Contact_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Type_Name__c</fullName>
        <description>Relation name when the other record type is used</description>
        <label>Other Type Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relation_Type__c</fullName>
        <label>Relation_Type</label>
        <picklist>
            <picklistValues>
                <fullName>Biological Parent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adoptive Parent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foster Parent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Step-parent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Child</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grandparent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Friend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Relative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>To_TMN_Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Identifies who the primary contact is related to</description>
        <label>To TMN Contact</label>
        <referenceTo>TMN_Contact__c</referenceTo>
        <relationshipLabel>Contact Relationships</relationshipLabel>
        <relationshipName>Contact_Relationships</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Contact Relationship</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Contact Relationship JO Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contact Relationships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>